added body contents to the file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Index.HTML</title>
-    </head>
-    
+<head>
+    <meta charset="utf-8">
+    <title>Index File</title>
+</head>
+
   <body>
+    <h1>First Paragraph</h1>
+
+    <p>Lorem ipsum dolor <strong>sit</strong> amet consectetur adipisicing elit. Dolor esse aliquam natus incidunt! Similique obcaecati harum 
+        illum modi, architecto dolorem assumenda libero, dignissimos error, esse corporis suscipit quasi! Nam, quaerat!
+    </p>    
+
+    <p>Lorem, ipsum dolor sit <em>amet</em> consectetur adipisicing elit. Consequuntur, dolorem? Qui excepturi commodi eveniet reiciendis, 
+        ab maiores fugit harum in ratione, enim magni voluptates ducimus rem laudantium neque, veritatis tenetur.
+    </p>
+
+
+
+
+
   </body>
+
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Dummy Blog</title>
+</head>
+
+<body>
+  <h1>
+    Main heading
+  </h1>
+  <p>
+    This is the first paragraph <strong>this text in bold</strong>
+  </p>
+</body>
+
+
+
 </html>
