add instructions and steps menu for lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,45 @@
 </head>
 <body>
   <h1>Lasagna</h1>
+  <img src="../images/lasagna.jpg" alt="lasagna" height="400" width="700">
+  <h2>Description</h2>
+  <p>Lasagna is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets.
+  It is made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), 
+  béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>Meat</li>
+    <li>Onion [&] Garlic</li>
+    <li>Tomato Products</li>
+    <li>Sugar</li>
+    <li>Spices [&] Seasonings</li>
+    <li>Lasagna Noodels</li>
+    <li>Cheeses</li>
+    <li>Egg</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Make the meat sauce</li>
+    <li>Cook the noodels</li>
+    <li>Make the ricotta mixture</li>
+    <li>Layer the lasagna according to the recipe instructions</li>
+    <li>Cover the foil and bake</li>
+    <li>Let the lasagna rest before serving</li>  
+  </ol>
+  <h3>How to Layer Lasagna</h3>
+  <p>Detailed layering instructions below: </p>
+  <ol>
+    <li>Meat Sauce</li>
+    <li>Noodles</li>
+    <li>Ricotta mixture</li>
+    <li>Mozzarella slices</li>
+    <li>Parmesan cheese</li>
+    <li>Repeat the layers, then top with the remaining Parmesan</li>
+  </ol>
+
+  <h3>How Long to Cook Lasagna</h3>
+  <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. 
+    Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. 
+    Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
 </body>
 </html>
