--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lasagna.html">Lasagna</a>
+  <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
+  <a href="recipes/butter_chicken.html" target="_blank">Butter Chicken</a>
 </body>
 </html>
