add instructions to the body

--- a/recipes/butter_chicken.html
+++ b/recipes/butter_chicken.html
@@ -45,17 +45,19 @@
   <h3>How to Layer Lasagna</h3>
   <p>Detailed layering instructions below: </p>
   <ol>
-    <li>Meat Sauce</li>
-    <li>Noodles</li>
-    <li>Ricotta mixture</li>
-    <li>Mozzarella slices</li>
-    <li>Parmesan cheese</li>
-    <li>Repeat the layers, then top with the remaining Parmesan</li>
+    <li>Gather all Ingredients. Preheat the oven to 375 degrees F (190 C) </li>
+    <li>Melt 2 tablespoons butter in a skillet over medium heat. Stir in onion and garlic, and cook slowly until the onion caramelizes to a dark brown, about 15 minutes.</li>
+    <li>Meanwhile, combine cream, tomato sauce, remaining butter, salt, cayenne pepper, and garam masala in a saucepan over medium-high heat; bring to a simmer.</li>
+    <li>Reduce heat to medium-low, cover, and simmer, stirring occasionally, for 30 minutes. Stir in caramelized onions.</li>
+    <li>While the sauce is simmering, toss chicken with vegetable oil until coated. Season with tandoori masala and spread out onto a baking sheet. </li>
+    <li>Bake chicken in the preheated oven until no longer pink in the center, about 12 minutes. </li>
+    <li>Add cooked chicken to the sauce and simmer for 5 minutes before serving. </li>
   </ol>
 
-  <h3>How Long to Cook Lasagna</h3>
-  <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. 
-    Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. 
-    Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
+  <h3>Nutrition Facts (per serving)</h3>
+  <p>Calories: 880</p>
+  <p>Fat: 82g</p>
+  <p>Carbs: 13g</p>
+  <p>Protein: 26g</p>
 </body>
 </html>
