change recipe file link style to <ul> lists

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
-  <br>
-  <hr>
-  <a href="recipes/butter_chicken.html" target="_blank">Butter Chicken</a>
-  <br>
-  <hr>
-  <a href=""></a>
+  <ul>
+    <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+    <br>
+    <hr>
+    <li><a href="recipes/butter_chicken.html" target="_blank">Butter Chicken</a></li>
+    <br>
+    <hr>
+    <li><a href="recipes/pancakes.html" target="_blank">Pancakes</a></li>
+    <br>
+    <hr>
+  </ul>
 </body>
 </html>
