add styles and gradient to main heading file: index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>The Odin Project</title>
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-
+  <h1 class="main_heading">Odin Recipes</h1>
+  
   <ul>
     <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a>
       <br>
