--- a/recipes/butter_chicken.html
+++ b/recipes/butter_chicken.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Butter Chicken</title>
 </head>
+
 <body>
-  <h1>Butter Chicken</h1>
+  <h1 class="heading">Butter Chicken</h1>
   <img src="../images/butter_chicken.jpg" alt="Butter Chicken" height="400" width="700">
-  <h2>Description</h2>
-  <p>Butter chicken, traditionally known as murgh makhani is an Indian dish originating in Delhi. 
+  <h2 class="desc">Description</h2>
+  <p class="para" id="butter_chicken">Butter chicken, traditionally known as murgh makhani is an Indian dish originating in Delhi. 
     It is a type of curry made from chicken with a spiced tomato and butter sauce. Its sauce is known for its rich texture. 
     It is similar to chicken tikka masala, which uses a tomato paste.</p>
-  <h3>Ingredients</h3>
+  <h3 class = "butter_chicken" id = "ingredients">Ingredients</h3>
   <ul>
     <li>2 tablesppons peanut oil, divided</li>
     <li>1 shallot, finely chopped</li>
@@ -33,7 +35,7 @@
     <li>1 tablespoon cornstarch</li>
     <li>¼ cup water</li>
   </ul>
-  <h3>Steps</h3>
+  <h3 class="steps" id="">Steps</h3>
   <ol>
     <li>Make the meat sauce</li>
     <li>Cook the noodels</li>
@@ -43,7 +45,7 @@
     <li>Let the lasagna rest before serving</li>  
   </ol>
   
-  <h3>Nutrition Facts (per serving)</h3>
+  <h3 class="nutrition">Nutrition Facts (per serving)</h3>
   <p>Calories: 880</p>
   <p>Fat: 82g</p>
   <p>Carbs: 13g</p>
