--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-  <h1>Pancakes</h1>
+  <h1 class="heading">Pancakes</h1>
   <img src="../images/pancake.jpg" alt="pancakes" height="400" width="700">
-  <h2>Description</h2>
+  <h2 class="desc">Description</h2>
 
   <p>A pancake (or hotcake, griddlecake, or flapjack) is a flat cake, often thin and round, prepared from a starch-based batter that may 
     contain eggs, milk and butter, and then cooked on a hot surface such as a griddle or frying pan. It is a type of batter bread.</p>
 
-  <h3>Ingredients</h3>
+  <h3 class = "ingredients" id = "pancakes">Ingredients</h3>
 
   <ul>
     <li>1 ½ cups all-purpose flour</li>
@@ -27,7 +27,7 @@
     <li>1 egg</li>
   </ul>
 
-  <h3>Steps</h3>
+  <h3 class="steps">Steps</h3>
   <ol>
     <li>Sift the dry ingredients together</li>
     <li>Make a well,then add the wet ingredients. Stir to combine</li>
