--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
   <h1 class="main_heading">Odin Recipes</h1>
-  
+
   <ul>
-    <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a>
+    <li><a href="recipes/lasagna.html" target="_blank" class="sub_list">Lasagna</a>
       <br>
     <img src="https://as2.ftcdn.net/v2/jpg/01/14/73/91/1000_F_114739145_9zoknAcrErvrbNBwEHLXbNrGLWN0SdfR.jpg" alt="lasagna" width="75" height="75">
     </li>
 
     <hr>
-    <li><a href="recipes/butter_chicken.html" target="_blank">Butter Chicken</a>
+    <li><a href="recipes/butter_chicken.html" target="_blank" class="sub_list">Butter Chicken</a>
       <br>
     <img src="https://as2.ftcdn.net/v2/jpg/04/84/39/19/1000_F_484391941_nQK3dz7fCW7f62PbBYyuf7uxwUyQdY3q.jpg" alt="butter chicken" width="75" height="75">
     </li>
 
     <hr>
-    <li><a href="recipes/pancakes.html" target="_blank">Pancakes</a>
+    <li><a href="recipes/pancakes.html" target="_blank" class="sub_list">Pancakes</a>
       <br>
       <img src="https://as1.ftcdn.net/v2/jpg/01/38/51/08/1000_F_138510850_OrFIKzAzirJtAC89svCoerw0ej9DV78k.jpg" alt="pancakes" width="75" height="75">
     </li>
