--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css" >
   <title>Lasagna</title>
 </head>
+
 <body>
-  <h1 class="heading">Lasagna</h1>
+  <h1 class="sub_title">Lasagna</h1>
   <img src="../images/lasagna.jpg" alt="lasagna" height="400" width="700">
-  <h2 class="desc">Description</h2>
-  <p class="para" id="lasagna">Lasagna is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets.
+  <h2>Description</h2>
+  <p>Lasagna is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets.
   It is made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), 
   béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
-  <h3 class = "ingredients">Ingredients</h3>
+  <h3>Ingredients</h3>
   <ul>
     <li>Meat</li>
     <li>Onion [&] Garlic</li>
@@ -23,7 +25,7 @@
     <li>Cheeses</li>
     <li>Egg</li>
   </ul>
-  <h3 class="steps">Steps</h3>
+  <h3>Steps</h3>
   <ol>
     <li>Make the meat sauce</li>
     <li>Cook the noodels</li>
