add background image to webpage and custom font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <title>The Odin Project</title>
 </head>
-<body>
+<body class="index_body">
   <h1 class="main_heading">Odin Recipes</h1>
 
   <ul>
