--- a/recipes/butter_chicken.html
+++ b/recipes/butter_chicken.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css" >
   <title>Butter Chicken</title>
 </head>
 
-<body>
-  <h1>Butter Chicken</h1>
+<body class="chicken_body">
+  <h1 class="sub_title">Butter Chicken</h1>
   <img src="../images/butter_chicken.jpg" alt="Butter Chicken" height="400" width="700">
   <h2>Description</h2>
   <p>Butter chicken, traditionally known as murgh makhani is an Indian dish originating in Delhi. 
