--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
   <title>Lasagna</title>
 </head>
 
-<body>
+<body class="lasagna_body">
   <h1 class="sub_title">Lasagna</h1>
   <img src="../images/lasagna.jpg" alt="lasagna" height="400" width="700">
   <h2>Description</h2>
