--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -8,7 +8,7 @@
   <title>Pancake</title>
 </head>
 
-<body>
+<body class="pancakes_body">
   <h1 class="sub_title">Pancakes</h1>
   <img src="../images/pancake.jpg" alt="pancakes" height="400" width="700">
   <h2>Description</h2>
